--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,23 @@
             <version>0.2.11</version>
         </dependency>
 
+
+        <!-- commons-fileupload.jar：这个包用于处理上传的文件 -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+
+        <!-- commons-io.jar：这个包用于处理上传的文件 -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
     </dependencies>
 
 
