--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,9 +54,20 @@
         <url-pattern>*.s</url-pattern>
     </servlet-mapping>-->
 
+    <filter-mapping>
+        <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+
+    <!-- 监听项目启动，用于初始化一些基本操作 -->
+    <listener>
+        <listener-class>com.ytempest.common.ProjectInitListener</listener-class>
+    </listener>
 
 </web-app>
